@@ -1,5 +1,5 @@
 /*
- * (C) 2013-2014 see Authors.txt
+ * (C) 2013-2015 see Authors.txt
  *
  * This file is part of MPC-HC.
  *
@@ -44,6 +44,7 @@ enum class MpcEvent {
     SYSTEM_MENU_POPUP_INITIALIZED,
     SYSTEM_MENU_POPUP_UNINITIALIZED,
     CHANGING_UI_LANGUAGE,
+    STREAM_POS_UPDATE_REQUEST
 };
 
 class EventClient;
