@@ -1,6 +1,6 @@
 /*
  * (C) 2003-2006 Gabest
- * (C) 2006-2014 see Authors.txt
+ * (C) 2006-2015 see Authors.txt
  *
  * This file is part of MPC-HC.
  *
@@ -44,6 +44,8 @@ private:
 
     CToolTipCtrl m_tooltip;
 
+    EventClient m_eventc;
+
     void Relayout();
 
 public:
@@ -83,5 +85,6 @@ protected:
     afx_msg HBRUSH OnCtlColor(CDC* pDC, CWnd* pWnd, UINT nCtlColor);
     afx_msg BOOL PreTranslateMessage(MSG* pMsg);
     afx_msg void OnTimeDisplayClicked();
+    afx_msg void OnContextMenu(CWnd* pWnd, CPoint point);
     afx_msg BOOL OnToolTipNotify(UINT id, NMHDR* pNMHDR, LRESULT* pResult);
 };
